GNOME Bugzilla – Bug 695473
treeview: fix a critical warning
Last modified: 2013-03-09 01:19:57 UTC
See patch - this is a 3.7 regression caused by the switch to gtk_widget_register/unregister_window().
Created attachment 238436 [details] [review] treeview: fix a critical warning gtk_tree_view_column_unset_tree_view() resets column->priv->tree_view to NULL. The function is called when a column is removed, but later from the same function we would call _gtk_tree_view_column_unrealize_button(), which expects column->priv->tree_view to be != NULL, causing these critical warnings Gtk-CRITICAL **: gtk_widget_unregister_window: assertion `GTK_IS_WIDGET (widget)' failed This commit moves the call to unset the tree view after the button is unrealized.
Attachment 238436 [details] pushed as fd51c8f - treeview: fix a critical warning